Compiler/src/parsing/VSOPParser.java
// Generated from e:\Data\David\git\Compiler-VSOP-LLVM\Compiler\grammars\VSOPParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VSOPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLELINE_COMMENT=1, AND=2, NOT=3, IN=4, CLASS=5, EXTENDS=6, ISNULL=7, 
		LET=8, NEW=9, SELF=10, IF=11, THEN=12, ELSE=13, WHILE=14, DO=15, TRUE=16, 
		FALSE=17, BOOL=18, UNIT=19, INT32=20, STRING=21, TYPE_IDENTIFIER=22, OBJECT_IDENTIFIER=23, 
		INTEGER_LITERAL=24, INVALID_HEX=25, INVALID_DECIMAL=26, STRING_LITERAL=27, 
		BAD_ESCAPE_LITERAL=28, RAW_LINEFEED_LITERAL=29, UNCLOSED_RAW_LINEFEED_LITERAL=30, 
		BAD_STRING_LITERAL=31, LBRACE=32, RBRACE=33, LPAR=34, RPAR=35, COLON=36, 
		SEMICOLON=37, COMMA=38, PLUS=39, MINUS=40, TIMES=41, DIV=42, POW=43, DOT=44, 
		EQUAL=45, LOWER=46, LOWER_EQUAL=47, ASSIGN=48, WS=49, UNCLOSED_MULTILINE_COMMENT=50, 
		MULTILINE_COMMENT=51, LPS=52;
	public static final int
		RULE_program = 0, RULE_clazz = 1, RULE_classBody = 2, RULE_field = 3, 
		RULE_method = 4, RULE_type = 5, RULE_formals = 6, RULE_formal = 7, RULE_block = 8, 
		RULE_expr = 9, RULE_args = 10, RULE_literal = 11, RULE_booleanLiteral = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "clazz", "classBody", "field", "method", "type", "formals", 
			"formal", "block", "expr", "args", "literal", "booleanLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'and'", "'not'", "'in'", "'class'", "'extends'", "'isnull'", 
			"'let'", "'new'", "'self'", "'if'", "'then'", "'else'", "'while'", "'do'", 
			"'true'", "'false'", "'bool'", "'unit'", "'int32'", "'string'", null, 
			null, null, null, null, null, null, null, null, null, "'{'", "'}'", "'('", 
			"')'", "':'", "';'", "','", "'+'", "'-'", "'*'", "'/'", "'^'", "'.'", 
			"'='", "'<'", "'<='", "'<-'", null, null, null, "'(*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SINGLELINE_COMMENT", "AND", "NOT", "IN", "CLASS", "EXTENDS", "ISNULL", 
			"LET", "NEW", "SELF", "IF", "THEN", "ELSE", "WHILE", "DO", "TRUE", "FALSE", 
			"BOOL", "UNIT", "INT32", "STRING", "TYPE_IDENTIFIER", "OBJECT_IDENTIFIER", 
			"INTEGER_LITERAL", "INVALID_HEX", "INVALID_DECIMAL", "STRING_LITERAL", 
			"BAD_ESCAPE_LITERAL", "RAW_LINEFEED_LITERAL", "UNCLOSED_RAW_LINEFEED_LITERAL", 
			"BAD_STRING_LITERAL", "LBRACE", "RBRACE", "LPAR", "RPAR", "COLON", "SEMICOLON", 
			"COMMA", "PLUS", "MINUS", "TIMES", "DIV", "POW", "DOT", "EQUAL", "LOWER", 
			"LOWER_EQUAL", "ASSIGN", "WS", "UNCLOSED_MULTILINE_COMMENT", "MULTILINE_COMMENT", 
			"LPS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VSOPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VSOPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<ClazzContext> clazz() {
			return getRuleContexts(ClazzContext.class);
		}
		public ClazzContext clazz(int i) {
			return getRuleContext(ClazzContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				clazz();
				}
				}
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClazzContext extends ParserRuleContext {
		public Token id;
		public Token idext;
		public TerminalNode CLASS() { return getToken(VSOPParser.CLASS, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public List<TerminalNode> TYPE_IDENTIFIER() { return getTokens(VSOPParser.TYPE_IDENTIFIER); }
		public TerminalNode TYPE_IDENTIFIER(int i) {
			return getToken(VSOPParser.TYPE_IDENTIFIER, i);
		}
		public TerminalNode EXTENDS() { return getToken(VSOPParser.EXTENDS, 0); }
		public ClazzContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clazz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterClazz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitClazz(this);
		}
	}

	public final ClazzContext clazz() throws RecognitionException {
		ClazzContext _localctx = new ClazzContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clazz);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(CLASS);
			setState(32);
			((ClazzContext)_localctx).id = match(TYPE_IDENTIFIER);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(33);
				match(EXTENDS);
				setState(34);
				((ClazzContext)_localctx).idext = match(TYPE_IDENTIFIER);
				}
			}

			setState(37);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(VSOPParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(VSOPParser.RBRACE, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitClassBody(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(LBRACE);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OBJECT_IDENTIFIER) {
				{
				setState(42);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(40);
					field();
					}
					break;
				case 2:
					{
					setState(41);
					method();
					}
					break;
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public Token id;
		public TerminalNode COLON() { return getToken(VSOPParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(VSOPParser.SEMICOLON, 0); }
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(VSOPParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((FieldContext)_localctx).id = match(OBJECT_IDENTIFIER);
			setState(50);
			match(COLON);
			setState(51);
			type();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(52);
				match(ASSIGN);
				setState(53);
				expr(0);
				}
			}

			setState(56);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public Token id;
		public TerminalNode LPAR() { return getToken(VSOPParser.LPAR, 0); }
		public FormalsContext formals() {
			return getRuleContext(FormalsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(VSOPParser.RPAR, 0); }
		public TerminalNode COLON() { return getToken(VSOPParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((MethodContext)_localctx).id = match(OBJECT_IDENTIFIER);
			setState(59);
			match(LPAR);
			setState(60);
			formals();
			setState(61);
			match(RPAR);
			setState(62);
			match(COLON);
			setState(63);
			type();
			setState(64);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPE_IDENTIFIER() { return getToken(VSOPParser.TYPE_IDENTIFIER, 0); }
		public TerminalNode INT32() { return getToken(VSOPParser.INT32, 0); }
		public TerminalNode BOOL() { return getToken(VSOPParser.BOOL, 0); }
		public TerminalNode STRING() { return getToken(VSOPParser.STRING, 0); }
		public TerminalNode UNIT() { return getToken(VSOPParser.UNIT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << UNIT) | (1L << INT32) | (1L << STRING) | (1L << TYPE_IDENTIFIER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalsContext extends ParserRuleContext {
		public List<FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(VSOPParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(VSOPParser.COMMA, i);
		}
		public FormalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterFormals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitFormals(this);
		}
	}

	public final FormalsContext formals() throws RecognitionException {
		FormalsContext _localctx = new FormalsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OBJECT_IDENTIFIER) {
				{
				setState(68);
				formal();
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(69);
					match(COMMA);
					setState(70);
					formal();
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public Token id;
		public TerminalNode COLON() { return getToken(VSOPParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitFormal(this);
		}
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			((FormalContext)_localctx).id = match(OBJECT_IDENTIFIER);
			setState(79);
			match(COLON);
			setState(80);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ExprContext ex1;
		public ExprContext ex2;
		public TerminalNode LBRACE() { return getToken(VSOPParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(VSOPParser.RBRACE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(VSOPParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(VSOPParser.SEMICOLON, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(LBRACE);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << ISNULL) | (1L << LET) | (1L << NEW) | (1L << SELF) | (1L << IF) | (1L << WHILE) | (1L << TRUE) | (1L << FALSE) | (1L << OBJECT_IDENTIFIER) | (1L << INTEGER_LITERAL) | (1L << STRING_LITERAL) | (1L << LBRACE) | (1L << LPAR) | (1L << RPAR) | (1L << MINUS))) != 0)) {
				{
				setState(83);
				((BlockContext)_localctx).ex1 = expr(0);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMICOLON) {
					{
					{
					setState(84);
					match(SEMICOLON);
					setState(85);
					((BlockContext)_localctx).ex2 = expr(0);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(93);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssContext extends ExprContext {
		public Token id;
		public TerminalNode ASSIGN() { return getToken(VSOPParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public AssContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterAss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitAss(this);
		}
	}
	public static class NewContext extends ExprContext {
		public Token id;
		public TerminalNode NEW() { return getToken(VSOPParser.NEW, 0); }
		public TerminalNode TYPE_IDENTIFIER() { return getToken(VSOPParser.TYPE_IDENTIFIER, 0); }
		public NewContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterNew(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitNew(this);
		}
	}
	public static class MinusContext extends ExprContext {
		public TerminalNode MINUS() { return getToken(VSOPParser.MINUS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MinusContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitMinus(this);
		}
	}
	public static class IsnullContext extends ExprContext {
		public TerminalNode ISNULL() { return getToken(VSOPParser.ISNULL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IsnullContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterIsnull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitIsnull(this);
		}
	}
	public static class BlContext extends ExprContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterBl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitBl(this);
		}
	}
	public static class WhileContext extends ExprContext {
		public TerminalNode WHILE() { return getToken(VSOPParser.WHILE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode DO() { return getToken(VSOPParser.DO, 0); }
		public WhileContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitWhile(this);
		}
	}
	public static class CallContext extends ExprContext {
		public Token id;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DOT() { return getToken(VSOPParser.DOT, 0); }
		public TerminalNode LPAR() { return getToken(VSOPParser.LPAR, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(VSOPParser.RPAR, 0); }
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public CallContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitCall(this);
		}
	}
	public static class UnitContext extends ExprContext {
		public TerminalNode RPAR() { return getToken(VSOPParser.RPAR, 0); }
		public TerminalNode LPAR() { return getToken(VSOPParser.LPAR, 0); }
		public UnitContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitUnit(this);
		}
	}
	public static class NotContext extends ExprContext {
		public TerminalNode NOT() { return getToken(VSOPParser.NOT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NotContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitNot(this);
		}
	}
	public static class LitContext extends ExprContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LitContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterLit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitLit(this);
		}
	}
	public static class SelfContext extends ExprContext {
		public TerminalNode SELF() { return getToken(VSOPParser.SELF, 0); }
		public SelfContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterSelf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitSelf(this);
		}
	}
	public static class SelfcallContext extends ExprContext {
		public Token id;
		public TerminalNode LPAR() { return getToken(VSOPParser.LPAR, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(VSOPParser.RPAR, 0); }
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public SelfcallContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterSelfcall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitSelfcall(this);
		}
	}
	public static class OiContext extends ExprContext {
		public Token id;
		public TerminalNode OBJECT_IDENTIFIER() { return getToken(VSOPParser.OBJECT_IDENTIFIER, 0); }
		public OiContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).enterOi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VSOPParserListener ) ((VSOPParserListener)listener).exitOi(this);
		}
	}
	public static class LetContext extends ExprContext {
		public Token id;
		public ExprContext as;
		public ExprContext ex;
		public TerminalNode LET() { return getToken(VSOPParser.LET, 0); }
		public TerminalNode COLON() { return getToken(VSOPParser.COLON, 0); }
		public TypeContext type() {
